--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,33 @@ GEMINI_API_KEY_3=your_third_key_here
 PICOVOICE_ACCESS_KEY=your_picovoice_access_key_here
 
 # Sakura Personality Mode
-# Options: flirty, friendly, romantic, tsundere
+# Female personas: flirty, friendly, romantic, tsundere
+# Male personas: flirty_m, friendly_m, romantic_m, kuudere
+# Default: friendly (family-safe, gender-neutral)
 SAKURA_PERSONALITY=friendly
+
+# Gemini Voice Configuration
+# Female voices: Aoede (warm), Kore (soft)
+# Male voices: Charon (deep), Fenrir (energetic)
+# Neutral: Puck (playful, works for any persona)
+# NOTE: Voice gender should match persona gender!
+VOICE_NAME=Aoede
+
+# Assistant Name & Wake Word Configuration
+# This name is used in the system prompt and as wake word (if built-in)
+ASSISTANT_NAME=Sakura
+
+# Wake Word Keywords (Optional - overrides ASSISTANT_NAME for wake word)
+# Built-in keywords (no training needed):
+# alexa, americano, blueberry, bumblebee, computer, grapefruit,
+# grasshopper, hey barista, hey google, hey siri, jarvis, ok google,
+# pico clock, picovoice, porcupine, terminator
+# For custom wake words, train at: https://console.picovoice.ai/
+# WAKE_WORD_KEYWORDS=jarvis
+
+# Custom Wake Word Path (for trained .ppn files)
+# Download your trained model from Picovoice Console and set path here
+# WAKE_WORD_PATH=C:/path/to/your_keyword_en_windows_v3_0_0.ppn
 
 # ============================================
 # TOOLS CONFIGURATION (All Optional)
