Add comprehensive security documentation and hardening guides
- SECURITY.md: Full threat model, 7 attack scenarios, incident response, planned countermeasures
- HARDENING.md: 5-level hardening guide (basic to code mods), VM setup, firewall rules, Sysmon config
- CONTRIBUTING.md: Security-focused contribution guidelines with review checklist
- docs/ETHICS_AND_ACCESSIBILITY.md: Real abuse scenarios, psychological risks, data retention details
- README.md: Prominent experimental warning banner, honest capability assessment
- .gitignore: Hide pytest, test files, and config test files from git

All docs now cross-reference each other. Honest about Sakura's full capabilities including self-modification.

--- a/.gitignore
+++ b/.gitignore
@@ -67,9 +67,22 @@ desktop.ini
 # Backups (large files)
 backups/*.zip
 
-# Test files
+# Test files and pytest
 test_*.py
 !test_live.py
-backups/sakura_wake_word/Sakura_en_windows_v4_0_0.ppn
+tests/
+.pytest_cache/
+.hypothesis/
+pytest.ini
+conftest.py
+htmlcov/
+.coverage
+coverage.xml
+
+# Config test files
 conversation_context.json
 error_recovery_log.json
+user_preferences.json
+
+# Wake word files
+backups/sakura_wake_word/Sakura_en_windows_v4_0_0.ppn
