--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ httpx>=0.25.0
 discord.py[voice]>=2.3.0
 PyNaCl>=1.5.0
 uv
+
+# Testing dependencies
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+hypothesis>=6.100.0
+pytest-mock>=3.12.0
+pytest-cov>=4.1.0
