feat(wake-word): Add personality-matched spoken greetings and enhance file search
- Add wake word spoken greetings with configurable probability (default 70%) for natural variation
- Implement personality-matched responses that adapt to current persona (flirty, friendly, tsundere, etc.)
- Add WAKE_GREETING_PROBABILITY environment variable for customizable greeting frequency (0.0-1.0)
- Enhance find_file with advanced path handling: user shortcuts, environment variables, UNC paths
- Add folder_hint parameter for targeted searches (e.g., "Find steam.exe in Steam folder on D drive")
- Implement symlink/junction following for Steam libraries and other linked folders
- Add follow_links and search_path_env parameters for flexible file discovery
- Add include_removable and max_depth parameters for configurable search scope
- Improve PowerShell path escaping for special characters and spaces
- Update documentation with new file search capabilities and wake word greeting feature
- Update CHANGELOG with detailed feature descriptions and usage examples

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ GEMINI_API_KEY_3=your_third_key_here
 # Get key from: https://console.picovoice.ai/
 PICOVOICE_ACCESS_KEY=your_picovoice_access_key_here
 
+# Wake Word Greeting Probability (0.0 to 1.0)
+# How often Sakura speaks a greeting when wake word is detected
+# 0.0 = never speak, 1.0 = always speak, 0.7 = 70% of the time (default)
+WAKE_GREETING_PROBABILITY=0.7
+
 # Sakura Personality Mode
 # Female personas: flirty, friendly, romantic, tsundere
 # Male personas: flirty_m, friendly_m, romantic_m, kuudere
