--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy>=1.26.0
 pvporcupine>=3.0.0
 python-dotenv>=1.0.0
 aiofiles>=23.1.0
+aiosqlite>=0.22.1
 httpx>=0.25.0
 discord.py[voice]>=2.3.0
 PyNaCl>=1.5.0
