--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ httpx>=0.25.0
 discord.py[voice]>=2.3.0
 PyNaCl>=1.5.0
 uv
-
+paramiko
 # Testing dependencies
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
