feat(core): Add virtual environment awareness and improve tool execution
- Add SQLite WAL files to .gitignore for database transaction safety
- Document Python virtual environment behavior and package installation workflow
- Add use_venv parameter to pip_install for flexible package installation targets
- Implement intelligent venv detection in pip_install to use project venv by default
- Add version info logging to tool availability checks for debugging
- Add use_venv parameter to execute_script for Python script execution context
- Implement venv detection for Python script execution with fallback chain
- Update main.py with comprehensive documentation of venv behavior and meta tools
- Enable seamless integration between pip_install and execute_script for new capabilities
- Allows users to install packages to project venv or system Python as needed

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,6 @@ user_preferences.json
 
 # Wake word files
 backups/sakura_wake_word/Sakura_en_windows_v4_0_0.ppn
+sakura.db
+sakura.db-shm
+sakura.db-wal
