--- a/mcp_config.json
+++ b/mcp_config.json
@@ -30,6 +30,15 @@
         "@modelcontextprotocol/server-sequential-thinking"
       ]
     }
+     },
+     "codacy": {
+       "_comment": "Codacy code quality analysis - requires CODACY_API_TOKEN",
+       "type": "stdio",
+       "command": ["npx", "-y", "@codacy/mcp-server"],
+       "env": {
+         "CODACY_API_TOKEN": "BScQsyc1PudCHod9ckaA"
+       }
+     }
   },
   "_optional_servers": {
     "_comment": "Uncomment and configure these as needed",
