feat: Add environment variables for Codacy, Brave, GitHub, Slack, and Google Maps integration in configuration files

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,24 @@ HOME_ASSISTANT_TOKEN=your_home_assistant_token_here
 # MCP (Model Context Protocol) Servers
 # Path to MCP config JSON file (see mcp_config.example.json)
 MCP_CONFIG_PATH=mcp_config.json
+
+# Codacy MCP Server - Code Quality Analysis
+# Get your account token from: https://app.codacy.com/account/settings/api-tokens
+CODACY_ACCOUNT_TOKEN=
+
+# Brave Search MCP Server - Web Search
+# Get API key from: https://brave.com/search/api/
+BRAVE_API_KEY=
+
+# GitHub MCP Server - Repository & Code Interactions
+# Create token at: https://github.com/settings/personal-access-tokens/new
+GITHUB_PERSONAL_ACCESS_TOKEN=
+
+# Slack MCP Server - Workspace Integration
+# Create bot token at: https://api.slack.com/apps
+SLACK_BOT_TOKEN=
+SLACK_TEAM_ID=
+
+# Google Maps MCP Server - Location & Maps
+# Get API key from: https://console.cloud.google.com/
+GOOGLE_MAPS_API_KEY=
