--- a/mcp_config.json
+++ b/mcp_config.json
@@ -46,7 +46,7 @@
       "type": "stdio",
       "command": ["uvx", "mcp-server-brave-search"],
       "env": {
-        "BRAVE_API_KEY": "your_brave_api_key"
+        "BRAVE_API_KEY": "${BRAVE_API_KEY}"
       }
     },
     "github": {
@@ -54,7 +54,7 @@
       "type": "stdio",
       "command": ["npx", "-y", "@modelcontextprotocol/server-github"],
       "env": {
-        "GITHUB_PERSONAL_ACCESS_TOKEN": "your_github_token"
+        "GITHUB_PERSONAL_ACCESS_TOKEN": "${GITHUB_PERSONAL_ACCESS_TOKEN}"
       }
     },
     "sqlite": {
@@ -87,8 +87,8 @@
       "type": "stdio",
       "command": ["npx", "-y", "@modelcontextprotocol/server-slack"],
       "env": {
-        "SLACK_BOT_TOKEN": "your_slack_bot_token",
-        "SLACK_TEAM_ID": "your_team_id"
+        "SLACK_BOT_TOKEN": "${SLACK_BOT_TOKEN}",
+        "SLACK_TEAM_ID": "${SLACK_TEAM_ID}"
       }
     },
     "google-maps": {
@@ -96,7 +96,7 @@
       "type": "stdio",
       "command": ["npx", "-y", "@modelcontextprotocol/server-google-maps"],
       "env": {
-        "GOOGLE_MAPS_API_KEY": "your_google_maps_key"
+        "GOOGLE_MAPS_API_KEY": "${GOOGLE_MAPS_API_KEY}"
       }
     },
     "everything-search": {
